<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="go_all_in">Go All In</string>
    <string name="going_all_out">going all out!</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league.
    </string>
    <string name="get_started">Get Started</string>
</resources>
