<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="133dp"
            android:layout_height="49dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@color/colorAccent"
            app:fontFamily="@font/montserrat" android:textSize="46sp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:id="@+id/textView3" app:fontFamily="@font/montserrat"
            android:textSize="22sp" android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:singleLine="false"
            app:fontFamily="@font/montserrat" android:textColor="@color/colorAccent" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:textStyle="bold"/>
    <Button
            android:text="@string/get_started"
            app:fontFamily="@font/montserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:textStyle="bold"
            android:textColor="@color/colorAccent" android:background="@drawable/swoosh_button"/>

</android.support.constraint.ConstraintLayout>